Agrego quinta extinción

--- a/antologia/CATEGORIAS_Polucion_Global/CATEGO_Sexta_Extincion/ITEMS_Sexta_Extincion/QUINTA_Extincion.html
+++ b/antologia/CATEGORIAS_Polucion_Global/CATEGO_Sexta_Extincion/ITEMS_Sexta_Extincion/QUINTA_Extincion.html
@@ -4,43 +4,112 @@
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="../../../css/bootstrap.min.css">
+  <link rel="stylesheet" href="../../../css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="../../../css/contenido.css">
-  <script src="../../../js/jquery-3.4.1.min.js"></script>
-  <script src="../../../js/bootstrap.min.js"></script>
   <title>Extinciones Masivas</title>
 </head>
 <body>
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~[ SECCION ]~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ //-->
-<div id="titulo">
-  Quinta Extincion
-</div>
-
-<hr color="blue">
-
 <div class="row">
-  <div class="col-sm-9">
+    <div class="col-sm-12">
+      <h2>
+        Quinta Extinción: La extinción masiva del Cretácico-Paleógeno
+      </h2>
+    </div>
+</div>
+<hr color="blue">
+<div class="row">
+  <div class="col-sm-12">
       <div class="container">
           <p>
-            Una extinción masiva es un tipo de extinción terminal en la cual desaparecen sin descendencia un 10 % o más de las especies a lo largo de un año,
-            o bien un 50 % o más de las especies en un periodo comprendido entre uno y tres millones y medio de años, cuando en momentos normales las extinciones 
-            se producen a un ritmo de entre dos y cinco familias biológicas de invertebrados marinos y vertebrados cada millón de años. Desde que la vida empezó
-            en la Tierra se han detectado cinco sucesos en el eón Fanerozoico tras los cuales se han extinguido más de las mitad de las especies existentes.
-          </p>
+            La extinción masiva del Cretácico-Paleógeno o Cretácico-Terciario fue un período de extinciones masivas de 
+            especies hace aproximadamente 66 millones de años. Corresponde al final del período Cretácico y al inicio 
+            del período Paleógeno (primer periodo del Cenozoico). También se le conoce abreviadamente como extinción 
+            masiva del límite K/T (del alemán Kreide/Tertiär Grenze) o K/Pg. El término Terciario está en desuso, por 
+            lo que la literatura científica moderna se refiere a la extinción del Cretácico-Paleógeno (K/Pg) para este evento.
+          </p> 
           <p>
-            En ocasiones las extinciones masivas se confunden con un evento ligado a la extinción,​ del inglés Extinction-Level Event o ELE, que sería el suceso, 
-            más o menos largo, provocador de dichas extinciones. Estos eventos son generalmente desconocidos, pero existen evidencias de colisiones con meteoritos 
-            de varios kilómetros, erupciones volcánicas masivas, supernovas cercanas, las acciones de una o más nuevas especies, combinaciones de las anteriores, etc. 
-            Del mismo modo, está bajo discusión si en el Holoceno vivimos la sexta gran extinción y si el surgimiento de las bacterias eucariotas y la exterminación de 
-            muchas bacterias procariotas por la expulsión de oxígeno pudo ser la primera y la desaparición de la Fauna de Ediacara otra más.
+            No se conoce la duración exacta de este evento. Cerca del 75 % de los géneros biológicos desaparecieron, 
+            entre ellos la mayoría de los dinosaurios, los reptiles voladores (pterosaurios), la mayor parte de reptiles 
+            acuáticos (plesiosaurios, pliosaurios e ictiosaurios) y los ammonites. Se han propuesto muchas explicaciones 
+            a este fenómeno, y una de las más conocida es que fue resultado del Impacto K/T por un objeto extraterrestre.
           </p>
           <hr>
-          
-          Fuente: <a href="https://es.wikipedia.org/wiki/Extinción_masiva"> https://es.wikipedia.org/wiki/Extinción_masiva</a>
+          <h3>Causas</h3>
+          <p>
+              Con el paso de los años se ha intentado explicar este fenómeno con varias hipótesis. Debido a que el fenómeno 
+              ocurrió hace millones de años, es complejo saber con exactitud qué fue lo que sucedió, depende de poder acceder 
+              e interpretar los indicios conservados en el registro geológico, por lo cual todas las hipótesis presentan una 
+              serie de problemas, sin embargo, la teoría más aceptada por la comunidad científica a nivel mundial es la hipótesis 
+              de Álvarez y colaboradores.
+          </p>
+          <h4>
+            Hipótesis de Álvarez y colaboradores
+          </h4>
+          <p>
+            En 1980 un grupo de investigadores liderados por el físico Luis Álvarez (Premio Nobel), su hijo el geólogo Walter Álvarez y 
+            otros colaboradores descubrieron, en las muestras tomadas por todo el mundo de las capas intermedias entre los períodos Cretácico 
+            y Terciario de hace 65 millones de años, una concentración de iridio cientos de veces más alta que lo normal.
+          </p>
+          <p>
+            Plantearon la así llamada «hipótesis Álvarez» o «hipótesis de Álvarez», conforme a la cual la extinción de los dinosaurios y 
+            de muchas otras formas de vida habría sido causada por el impacto de un gran meteorito contra la superficie de la Tierra hace 
+            65 millones de años.
+          </p>            
+          <p>  
+            Para demostrar esta hipótesis, las investigaciones se centraron en encontrar una capa en la corteza de la Tierra con niveles 
+            elevados de iridio. Los niveles del iridio son generalmente más altos en asteroides y otros objetos extraterrestres. 
+            La evidencia del iridio fue descubierta anteriormente al hallazgo del cráter de Chicxulub. Actualmente esta hipótesis 
+            es la más aceptada aunque también tiene sus problemas.
+          </p>
+          <h4>
+              Teoría de los múltiples impactos
+          </h4>
+          <p>
+              La teoría o hipótesis de los múltiples impactos es otro de los escenarios planteados como posible causa de la extinción 
+              masiva del Cretácico-Terciario. La teoría guarda un parecido a la presentada por los Álvarez, ya que también dice que la 
+              causa de la extinción habría sido la colisión de un objeto extraterrestre con la tierra, pero plantea dos escenarios. 
+              Expone que múltiples meteoritos colisionaron con la tierra, o bien, que un solo meteorito o asteroide se fragmentó en 
+              varias partes al entrar en contacto con la tierra, siendo el impacto que causó el cráter de Chicxulub uno de ellos. 
+              Otros posibles escenarios de impacto serían el cráter Silverpit y el cráter Shiva, en cuya formación pudo haberse 
+              producido un ascenso del manto terrestre a través de la fractura, explicando el origen geológico de los Traps del Deccán. 
+              El impacto podría haber sido parecido al ocurrido entre el cometa Shoemaker-Levy 9 con Júpiter.
+          </p>
+          <h4>
+              Los traps del Decán
+          </h4>
+          <p>
+              La gigantesca actividad volcánica que produjo los traps del Decán, en la India, también ha sido llamada a ser 
+              la causa de la extinción. Hay varias maneras en que estas pudieron haber causado la extinción, incluyendo la 
+              expulsión de polvo y otros gases que hubieran disminuido la cantidad de luz que ingresa al planeta, dificultando 
+              así la fotosíntesis además de enfriar el planeta; para luego con otros gases como el CO<sub>2</sub> calentar el planeta y 
+              causar un efecto invernadero.
+          </p>
+
+          <p>
+              Originalmente se pensaba que la actividad volcánica empezó cerca de 68 millones de años atrás y duró cerca de 2 millones 
+              de años, aunque estudios más recientes afirman que pudieron haber sido aproximadamente 800 000 años. Años atrás esta teoría 
+              estaba asociada a una extinción lenta, sin embargo, luego Luis Álvarez expuso que los paleontólogos estaban obviando el 
+              efecto Signor–Lipps. Para problematizar más esta teoría, la mayoría de la evidencia encontrada desde la década de 1980 habla 
+              de una extinción más rápida que coincide más con el impacto de un meteorito.
+          </p>
+          <h4>
+              Múltiples causas
+          </h4>
+          <p>
+              Archibald y Fastovsky proponen, en 2004, un escenario que combina tres causas principales: la actividad volcánica, 
+              la disminución del nivel del mar y el impacto de un objeto contra la tierra. En este escenario, las especies tanto 
+              marinas como terrestres ya enfrentaban serios problemas causados por los cambios climáticos y por la pérdida del 
+              hábitat; así, al ser los dinosaurios los animales más grandes, fueron los primeros en ser afectados. Al mismo tiempo, 
+              el polvo y gases producto de la actividad volcánica enfriaron y secaron grandes áreas del planeta. En medio de este 
+              ambiente de tensión y estrés para la naturaleza, llegó el impacto de un meteorito, lo que causó el colapso de las 
+              especies que utilizaban la fotosíntesis, que son la base de la cadena alimenticia, por lo que toda la cadena colapsó. 
+              La mayor diferencia entre esta hipótesis con las otras que tratan solo una causa es que expone que las especies ya se 
+              encontraban luchando por su supervivencia antes del impacto, lo que debilitó severamente su capacidad de reacción y 
+              recuperación. Incluso se ha apuntado a la aparición de los insectos como una causa más, ya que estos produjeron 
+              cambios no solo en el entorno, sino que también contagiaron nuevas enfermedades que acabarían con la vida de los dinosaurios.
+          </p>
       </div>
-  </div>
-  <div class="col-sm-3">
-    <img src="IMAGENES_Sexta_Extincion/yelmo.jpg" class="img-fluid rounded-circle" alt="Yelmo">
   </div>
 </div>
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~[ FINAL ]~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ //-->
