--- a/antologia/CATEGORIAS_Polucion_Global/CATEGO_Sexta_Extincion/MENU_Sexta_Extincion.html
+++ b/antologia/CATEGORIAS_Polucion_Global/CATEGO_Sexta_Extincion/MENU_Sexta_Extincion.html
@@ -34,7 +34,7 @@
             <li><a href="ITEMS_Sexta_Extincion/TERCERA_Extincion.html" target="iframe_a">La tercera extinción</a></li>
             <li><a href="ITEMS_Sexta_Extincion/CUARTA_Extincion.html" target="iframe_a">La cuarta extinción</a></li>
             <li><a href="ITEMS_Sexta_Extincion/QUINTA_Extincion.html" target="iframe_a">La quinta extinción</a></li>
-            <li><a href="ITEMS_Sexta_Extincion/SEXTA_Extincion.html" target="iframe_a">La sexta extinción</a></li>
+            <li><a href="ITEMS_Sexta_Extincion/SextaExtincion.pdf" target="iframe_a">La sexta extinción: la pérdida de especies y poblaciones en el Neotrópico</a></li>
             <div class="nav_titulo">
                Artículos
             </div>
