Argego una breve conclusión

--- a/antologia/CATEGORIAS_Polucion_Global/CATEGO_Conclusiones/Conclusiones.html
+++ b/antologia/CATEGORIAS_Polucion_Global/CATEGO_Conclusiones/Conclusiones.html
@@ -28,14 +28,20 @@
                 rodean, espero que este trabajo genere una consciencia mayor en las personas acerca 
                 de nuestro futuro así como lo hizo conmigo.
             </p>
+            <hr>
             <strong>
                 Andrés González:
             </strong>
             <p>
-                
+                Esta antología me sirvió para concientizarme acerca de la contaminación global.
+                Es un tema importante a tratar, ya que cada vez debemos tomar acciónes más fuertes si
+                queremos revertir el daño hecho al planeta.
+            </p>
+            <p>
+                Es importante cambiar costumbres que deterioren el medio ambiente y exigir a las grandes empresas contaminantes
+                que hagan lo mismo. Al generar pequeños cambios, podemos escalar poco a poco hasta algo más grande.
             </p>
         </div>
-        <hr color="blue">      
     </div>
 </body>
 </html>
