Agrego conclusión de Santos

--- a/antologia/CATEGORIAS_Polucion_Global/CATEGO_Conclusiones/Conclusiones.html
+++ b/antologia/CATEGORIAS_Polucion_Global/CATEGO_Conclusiones/Conclusiones.html
@@ -16,7 +16,7 @@
         </h1>
         <div class="parrafo">
             <strong>
-                Carlos:
+                Carlos Almaguer:
             </strong>
             <p>
                 El tema de la contaminación global es una realidad en nuestros tiempos que 
@@ -40,6 +40,19 @@
             <p>
                 Es importante cambiar costumbres que deterioren el medio ambiente y exigir a las grandes empresas contaminantes
                 que hagan lo mismo. Al generar pequeños cambios, podemos escalar poco a poco hasta algo más grande.
+            </p>
+            <hr>
+            <strong>
+                Santos Albañil:
+            </strong>
+            <p>
+                Actualmente se habla tanto sobre contaminación y catástrofes ambientales que de algún modo se “normalizó” a la gente 
+                ya no le asusta, entonces este exceso de repetición y de información sobre cómo estamos destruyendo el planeta consiguió 
+                de alguna forma el efecto contrario, a nadie le importa y nadie quiere saber, porque ya lo saben porque piensan que no 
+                es posible hacer nada y porque incluso lo que una persona pudiese hacer de forma individual es un porcentaje insignificante 
+                comparado con los daños que producen las grandes industrias. Aun así nunca esta de mas intentar recordar que el planeta 
+                en el que estamos, por el momento y en los años venideros es y será el único a disposición y que nos estamos conduciendo 
+                a nuestra propia destrucción, independientemente de la destrucción que causamos a otras especies.
             </p>
         </div>
     </div>
