Se agreo contenido en pdf al archivo del MENU Y Introduccion, asi como otro codigo fuente para un mejor contenido

--- a/antologia/CATEGORIAS_Polucion_Global/CATEGO_Cambio_Climatico/ITEMS_Cambio_Climatico/INTROITO_Cambio_Climatico.html
+++ b/antologia/CATEGORIAS_Polucion_Global/CATEGO_Cambio_Climatico/ITEMS_Cambio_Climatico/INTROITO_Cambio_Climatico.html
@@ -16,17 +16,21 @@
 <body BGColor=white>
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~[ SECCION ]~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ //-->
 <div id="titulo">
-   Introito
+   El cambio climático  
 </div>
 
 <hr color="blue">
 
 <div id="section">
-   El caracter depredador de muchos hombres, motivados por su codicia, esta haciendo un gran daño a muchas de las especies alrededor del mundo y en consecuencia estan en
-   peligro inminente de extinción. Este caracter depredador es una de las causas que estan contribuyendo a la sexta extinción.
+   El cambio climático es un tema de importancia, ya que dependemos de ecosistemas y del clima que estos tienen, si la temperatura del planeta cambia tan solo unos cuantos centígrados el clima en el planeta cambiaria de manera abrumadora, tendríamos inundaciones en zonas del aribe e incluso ciudades ubicadas en zonas costeras quedaría bajo el agua, las tormentas serias de mayor intensidad, se presentarían incendios forestales en selvas y bosques, acabando con los animales de la zona y por consecuente al hombre. Es por eso que hoy en día la información de como evitar emisiones de gases de efecto invernadero y acciones para ser mas consientes de la contaminación que genera la actividad humana, la cual es la principal de que este fenómeno se este presentando de manera tan acelerada.
    <hr>
-   Hugo Rangel<br>
+
 </div>
+<p>
+  
+</p>
+<br>
+Fuente: https://foroambiental.com.mx/10-medidas-para-combatir-el-cambio-climatico/
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~[ FINAL ]~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ //-->
 </body>
 </html>
