Categoría Actividad Solar

--- a/antologia/CATEGORIAS_Polucion_Global/CATEGO_Actividad_Solar/MENU_Actividad_Solar.html
+++ b/antologia/CATEGORIAS_Polucion_Global/CATEGO_Actividad_Solar/MENU_Actividad_Solar.html
@@ -4,42 +4,44 @@
    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+   <title>MENU_Biografia_de_Mario_Molina</title>
+   <link rel="stylesheet" href="../../css/bootstrap-grid.css">
    <link rel="stylesheet" href="../../css/w3.css">
    <link rel="stylesheet" href="../../css/nav.css">
 </head>
-
-<body>
-<div class="w3-row w3-border">
-   <div class="w3-container w3-quarter" style="background: white">
-   
+<style>
+   html,body{
+      height: 100%;
+   }
+   .contenido{
+      position: absolute; 
+      width: 95%; 
+      height: 100%;
+   }
+</style>
+<body style="background:white;">
+<div class="row">
+   <div class="col-sm-3" style="background: white">   
       <div id="nav">
-         <div class="nav_titulo">
-            Actividad solar cada 11 años
-         </div>
          <ul id="nav_menu">
-            <li><a href="CONTENIDO_Actividad_Solar/VC5_Int_Sup.pdf" target="iframe_a">Manchas solares</a></li>
-            <li><a href="#" target="iframe_a">Texto 2</a></li>
-            <li><a href="#" target="iframe_a">Texto 3</a></li>
-            <li><a href="#" target="iframe_a">Texto 4</a></li>
-            <li><a href="#" target="iframe_a">Texto 5</a></li>
-            <li><a href="#" target="iframe_a">Texto 6</a></li>
-            <li><a href="#" target="iframe_a">Texto 7</a></li>
-            <br>
             <div class="nav_titulo">
-               Radiación UV procedente del sol
+               Radiación Solar
             </div>
-            <li><a href="#" target="iframe_a">Tipos de radiación UV</a></li>
-            <li><a href="#" target="iframe_a">Efectos de la radiación UV</a></li>
-            <li><a href="#" target="iframe_a">Radiación UV en la Ciudad de México</a></li>
-            <li><a href="#" target="iframe_a">Aplicaciones industriales de la radiación UV</a></li>
-            <li><a href="#" target="iframe_a">Cuando es nociva y cuando benefica la radiación UV</a></li>
-          </ul>
+            <li><a href="pagina_video.html" target="iframe_a">Documental. Radiación Solar</a></li>
+            <div class="nav_titulo">
+               Artículos
+            </div>
+            <li><a href="CONTENIDO_Actividad_Solar/elsolysuradiacion.pdf" target="iframe_a"> El Sol y su Radiación</a></li>
+            <li><a href="CONTENIDO_Actividad_Solar/fotoproteccion2010.pdf" target="iframe_a">Curso de Fotoprotección</a></li>
+            <li><a href="CONTENIDO_Actividad_Solar/Radiacion_Solar.pdf" target="iframe_a">La radiación solar</a></li>
+            <li><a href="CONTENIDO_Actividad_Solar/san14610.pdf" target="iframe_a">El sol: ¿enemigo de nuestra piel?</a></li>
+            <li><a href="CONTENIDO_Actividad_Solar/vi-006.pdf" target="iframe_a">Contaminación del aire urbano. Efectos de la radiación solar</a></li>
+            <li><a href="CONTENIDO_Actividad_Solar/UNR_ING320_piacentini.pdf" target="iframe_a">Radiación solar, calidad del aire y sus relaciones con el cambio climático en la región</a></li>
+         </ul>
       </div>
    </div>
-   <div class="w3-container w3-threequarter" style="background: white;">
-      <div style="margin-top: 4px; background: white; width: 100%; height: auto;">
-         <iframe src="ITEMS_Actividad_Solar/INTROITO_Actividad_Solar.html" width="100%" height="480px" name="iframe_a" frameborder="0" seamless="seamless"></iframe>
-      </div>
+   <div class="col-sm-9" style="position: relative;  padding-bottom: 50%;">
+      <iframe src="pagina_video.html" width="100%" height="480px" name="iframe_a" frameborder="0" seamless="seamless"></iframe>
    </div>
 </div>
 </body>
