Agrego conclusiones de Santos

--- a/antologia/CATEGORIAS_Polucion_Global/CATEGO_Conclusiones/Conclusiones.html
+++ b/antologia/CATEGORIAS_Polucion_Global/CATEGO_Conclusiones/Conclusiones.html
@@ -50,7 +50,7 @@
                 ya no le asusta, entonces este exceso de repetición y de información sobre cómo estamos destruyendo el planeta consiguió 
                 de alguna forma el efecto contrario, a nadie le importa y nadie quiere saber, porque ya lo saben porque piensan que no 
                 es posible hacer nada y porque incluso lo que una persona pudiese hacer de forma individual es un porcentaje insignificante 
-                comparado con los daños que producen las grandes industrias. Aun así nunca esta de mas intentar recordar que el planeta 
+                comparado con los daños que producen las grandes industrias. Aún así, nunca está de más intentar recordar que el planeta 
                 en el que estamos, por el momento y en los años venideros es y será el único a disposición y que nos estamos conduciendo 
                 a nuestra propia destrucción, independientemente de la destrucción que causamos a otras especies.
             </p>
