Galería de fotos Andrés y Santos

--- a/antologia/PORTADA_Polucion_Global.html
+++ b/antologia/PORTADA_Polucion_Global.html
@@ -28,10 +28,10 @@
       <li><a href="CATEGORIAS_Polucion_Global/CATEGO_Atmosfera/MENU_Atmosfera.html" target="iframe_z">Atmósfera</a></li> |
       <li><a href="CATEGORIAS_Polucion_Global/CATEGO_Suelos/MENU_Suelos.html" target="iframe_z">Suelos</a></li> |
       <li><a href="CATEGORIAS_Polucion_Global/CATEGO_Actividad_Solar/MENU_Actividad_Solar.html" target="iframe_z">Actividad solar</a></li> |
-      <li><a href="CATEGORIAS_Polucion_Global/CATEGO_Actividad_Solar/MENU_Actividad_Volcanica.html" target="iframe_z">Actividad volcánica</a></li> |
+      <li><a href="CATEGORIAS_Polucion_Global/CATEGO_Volcanes/MENU_Volcanes.html" target="iframe_z">Actividad volcánica</a></li> |
 
       <li><a href="CATEGORIAS_Polucion_Global/CATEGO_Cambio_Climatico/MENU_Cambio_Climatico.html" target="iframe_z">Cambio climático</a></li> |
-      <li><a href="CATEGORIAS_Polucion_Global/CATEGO_Especies_en_Extincion/MENU_Especies_en_Extincion.html" target="iframe_z">Especies en extinción</a></li> |
+      <!-- <li><a href="CATEGORIAS_Polucion_Global/CATEGO_Especies_en_Extincion/MENU_Especies_en_Extincion.html" target="iframe_z">Especies en extinción</a></li> | -->
       <li><a href="CATEGORIAS_Polucion_Global/CATEGO_Sexta_Extincion/MENU_Sexta_Extincion.html" target="iframe_z">Extinciones masivas</a></li> |
       <li><a href="CATEGORIAS_Polucion_Global/CATEGO_Conflicto_por_agua_Mexico_EUA/MENU_Conflicto_por_agua_Mexico_EUA.html" target="iframe_z">Conflicto por agua: México EUA</a></li> |
       
