se cambio la ruta de los archivos a la ruta relativa

--- a/antologia/CATEGORIAS_Polucion_Global/CATEGO_Conflicto_por_agua_Mexico_EUA/ITEMS_Conflicto_por_agua_Mexico_EUA/INTROITO_Conflicto_por_agua_Mexico_EUA.html
+++ b/antologia/CATEGORIAS_Polucion_Global/CATEGO_Conflicto_por_agua_Mexico_EUA/ITEMS_Conflicto_por_agua_Mexico_EUA/INTROITO_Conflicto_por_agua_Mexico_EUA.html
@@ -30,7 +30,7 @@ El hombre y su supervivencia  dependiente del agua es por eso que el acceso al a
    Jaimes Ojeda Erick Simeón<br>
 </div>
 <br>
-<img src="C:\Users\erick\OneDrive\Documentos\GitHub\antologia-digital-contaminacion\antologia\CATEGORIAS_Polucion_Global\CATEGO_Conflicto_por_agua_Mexico_EUA\ITEMS_Conflicto_por_agua_Mexico_EUA\Imagenes_Conflicto_del_Agua\agua.jpg">
+<img src="Imagenes_Conflicto_del_Agua\agua.jpg">
 <br>
 Fuente:  https://inperfecto.com.mx/2019/03/18/que-porcentaje-del-planeta-tierra-es-agua/
 
