--- a/antologia/CATEGORIAS_Polucion_Global/CATEGO_Conflicto_por_agua_Mexico_EUA/MENU_Conflicto_por_agua_Mexico_EUA.html
+++ b/antologia/CATEGORIAS_Polucion_Global/CATEGO_Conflicto_por_agua_Mexico_EUA/MENU_Conflicto_por_agua_Mexico_EUA.html
@@ -12,16 +12,10 @@
          <div class="nav_titulo">Conflicto entre México y E. U. A. por el agua</div>
 
          <ul id="nav_menu">
-            <li><a href="C:\Users\erick\OneDrive\Documentos\GitHub\antologia-digital-contaminacion\antologia\CATEGORIAS_Polucion_Global\CATEGO_Conflicto_por_agua_Mexico_EUA\ITEMS_Conflicto_por_agua_Mexico_EUA\Contenido_PDF\conflicto_por_el_agua_México_USA.pdf" target="iframe_a">Conflicto del agua </a></li>
-            <li><a href="C:\Users\erick\OneDrive\Documentos\GitHub\antologia-digital-contaminacion\antologia\CATEGORIAS_Polucion_Global\CATEGO_Conflicto_por_agua_Mexico_EUA\ITEMS_Conflicto_por_agua_Mexico_EUA\Contenido_PDF\importancia_del_agua.pdf" target="iframe_a">Cuidemos el agua fuente de vida y de salud</a></li>
-            <li><a href="C:\Users\erick\OneDrive\Documentos\GitHub\antologia-digital-contaminacion\antologia\CATEGORIAS_Polucion_Global\CATEGO_Conflicto_por_agua_Mexico_EUA\ITEMS_Conflicto_por_agua_Mexico_EUA\Contenido_PDF\Sandra_Bustillos_Durán.pdf" target="iframe_a">Importancia del agua</a></li>
-            <li><a href="#" target="iframe_a">Texto 4</a></li>
-            <li><a href="#" target="iframe_a">Texto 5</a></li>
-            <li><a href="#" target="iframe_a">Texto 6</a></li>
-            <li><a href="#" target="iframe_a">Texto 7</a></li>
-            <li><a href="#" target="iframe_a">Texto 8</a></li>
-            <li><a href="#" target="iframe_a">Texto 9</a></li>
-            <li><a href="#" target="iframe_a">Texto 10</a></li>
+            <li><a href="ITEMS_Conflicto_por_agua_Mexico_EUA\Contenido_PDF\conflicto_por_el_agua_México_USA.pdf" target="iframe_a">Conflicto del agua </a></li>
+            <li><a href="ITEMS_Conflicto_por_agua_Mexico_EUA\Contenido_PDF\importancia_del_agua.pdf" target="iframe_a">Cuidemos el agua fuente de vida y de salud</a></li>
+            <li><a href="ITEMS_Conflicto_por_agua_Mexico_EUA\Contenido_PDF\Sandra_Bustillos_Durán.pdf" target="iframe_a">Importancia del agua</a></li>
+           
          </ul>
          <br>
       </div>
