--- a/antologia/CATEGORIAS_Polucion_Global/CATEGO_Cambio_Climatico/ITEMS_Cambio_Climatico/Cambio_climatico.html
+++ b/antologia/CATEGORIAS_Polucion_Global/CATEGO_Cambio_Climatico/ITEMS_Cambio_Climatico/Cambio_climatico.html
@@ -32,7 +32,7 @@ Desde que nació la revolución industrial y las maquinas a vapor surgen aumenta
 </li>
     </p>
 
-<img src="C:\Users\erick\OneDrive\Documentos\GitHub\antologia-digital-contaminacion\antologia\CATEGORIAS_Polucion_Global\CATEGO_Cambio_Climatico\ITEMS_Cambio_Climatico\imaneges_camambio_climatico/cambio.jpg" alt="cambio">
+<img src="imaneges_camambio_climatico/cambio.jpg" alt="cambio">
     <br>
     <hr>
     <p>
@@ -49,7 +49,7 @@ Los desechos que estas envolturas están constituidos en su mayoría por plásti
 </li> <br>
 
 <center> </center>
-  <img src="C:\Users\erick\OneDrive\Documentos\GitHub\antologia-digital-contaminacion\antologia\CATEGORIAS_Polucion_Global\CATEGO_Cambio_Climatico\ITEMS_Cambio_Climatico\imaneges_camambio_climatico/tortuga.jpg" style=" width: 50%;float: center" >
+  <img src="imaneges_camambio_climatico/tortuga.jpg" style=" width: 50%;float: center" >
   <br></center>
 
 
